# UrlShortener

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: alembic.ini  database.py  main.py  models.py  worker.py
backend/api/: deps.py  main.py
backend/api/routes/: url.py
backend/crud/: url.py
backend/migrations/: env.py
backend/migrations/versions/: 2eb681f86e06_add_urlmapping_table.py  3975f1325759_add_urlmapping_table.py
frontend/: Dockerfile  index.html  script.js
scripts/: entrypoint.sh  precommit_cz.sh
