[tool.poetry]
name = "urlshortener"
version = "0.1.0"
description = ""
authors = ["vlek6 <aleksanderbiskup@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.2"}
sqlmodel = "^0.0.22"
alembic = "^1.13.3"
psycopg-binary = "^3.2.3"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
commitizen = "^3.29.1"
pre-commit = "^4.0.1"
cz-conventional-gitmoji = "^0.6.1"
gitmoji = "^0.1.0"
black = "^24.10.0"
python-lsp-server = {extras = ["all"], version = "^1.12.0"}
jedi = "^0.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length =  88

[tool.commitizen]
name = "cz_gitmoji"
version = "0.1.0"
update_changelog_on_bump = true


[tool.ruff]
line-length = 88
select = [
    "ALL",
]
exclude = ["migrations"]
ignore = ["D", "A003", "TCH003", "TCH001"]

[tool.poetry.scripts]
lint = "ruff check ."
format = "ruff check --fix ."
